--- a/src/scss/components/_product-submenu.scss
+++ b/src/scss/components/_product-submenu.scss
@@ -3,6 +3,25 @@
     display: flex;
     align-items: center;
     margin-bottom: 64px;
+    position: relative;
+    &:before, &:after {
+      content: '';
+      display: block;
+      top: 0;
+      bottom: 0;
+      z-index: 10;
+      position: absolute;
+    }
+    &:before {
+      right: 0;
+      width: 42px;
+      background: linear-gradient(to right, transparent, var(--main-beige));
+    }
+    &:after {
+      left: 100%;
+      width: 50%;
+      background: var(--main-beige);
+    }
   }
   &__block{
     margin-right: 40px;
@@ -10,18 +29,6 @@
   }
   &__list {
     align-items: center;
-    position: relative;
-    &:after {
-      content: '';
-      display: block;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      width: 42px;
-      z-index: 10;
-      position: absolute;
-      background: linear-gradient(to right, transparent, var(--main-beige));
-    }
     @include mobile {
       display: flex;
       flex-direction: row;
